New section Reports

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -18,6 +18,7 @@
     <string name="section_scanner">Scansione</string>
     <string name="section_structures">Strutture</string>
     <string name="section_extras">Extra</string>
+    <string name="section_reports">Riepiloghi</string>
     <string name="section_sync">Sincronizzazione</string>
     <string name="section_settings">Impostazioni</string>
     <string name="section_about">Informazioni</string>
