--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -76,6 +76,11 @@
     <string name="extras_no_extras_allowed">Nessun extra è consentito per questa struttura</string>
     <string name="extras_marked_extra_as_untransmitted">Extra contrassegnato come non trasmesso</string>
 
+    <!-- Reports section -->
+    <string name="reports_timestamps">Ingressi e Uscite</string>
+    <string name="reports_daily_activities">Attività giornaliere</string>
+    <string name="reports_monthly_activities">Attività mensili</string>
+
     <!-- Settings section -->
     <string name="settings_tablet">Impostazioni tablet</string>
 
