--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -61,6 +61,9 @@
     <string name="structures_employees_already_assigned">Impiegati già assegnati</string>
     <string name="structures_employee_set_conditions">Assegnare una o più condizioni al dipendente</string>
 
+    <!-- Extras section -->
+    <string name="extras_add_new_extra">Aggiungere un nuovo extra</string>
+
     <!-- Settings section -->
     <string name="settings_tablet">Impostazioni tablet</string>
 
