--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -69,6 +69,8 @@
     <string name="extras_time_hour">%d ora</string>
     <string name="extras_time_hours_minutes">%d ore e %d minuti</string>
     <string name="extras_time_hours">%d ore</string>
+    <string name="extras_unable_to_change_transmitted_activity">Impossibile modificare un extra già trasmesso</string>
+    <string name="extras_unable_to_use_contract">Impossibile utilizzare il contratto</string>
 
     <!-- Settings section -->
     <string name="settings_tablet">Impostazioni tablet</string>
