--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,8 @@
     <string name="extras_time_hour">%d hour</string>
     <string name="extras_time_hours_minutes">%d hours and %d minutes</string>
     <string name="extras_time_hours">%d hours</string>
+    <string name="extras_unable_to_change_transmitted_activity">Unable to modify an already transmitted extra</string>
+    <string name="extras_unable_to_use_contract">Unable to use the contract</string>
 
     <!-- Settings section -->
     <string name="settings_tablet">Tablet settings</string>
