Added extras synchronization

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
     <!-- Application values -->
     <string name="app_description">Esegui le tue attività in Hotel</string>
 
@@ -108,6 +108,7 @@
     <string name="sync_step_date_time">Controllo di data e ora del dispositivo</string>
     <string name="sync_step_timestamps_transmission">Trasmissione delle timbrature</string>
     <string name="sync_step_activities_transmission">Trasmissione delle attività</string>
+    <string name="sync_step_extras_transmission">Trasmissione degli extra</string>
     <string name="sync_step_get_data">Scaricamento dei dati</string>
     <string name="sync_step_saving_data">Salvataggio dei dati</string>
     <string name="sync_step_completed">Sincronizzazione completata</string>
