--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
     <!-- Application values -->
     <string name="app_description">Get your Hotel activities done</string>
 
@@ -108,6 +108,7 @@
     <string name="sync_step_date_time">Checking device date and time</string>
     <string name="sync_step_timestamps_transmission">Timestamps transmission</string>
     <string name="sync_step_activities_transmission">Activities transmission</string>
+    <string name="sync_step_extras_transmission">Extras transmission</string>
     <string name="sync_step_get_data">Data download</string>
     <string name="sync_step_saving_data">Saving data</string>
     <string name="sync_step_completed">Synchronization completed</string>
