--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -77,9 +77,9 @@
     <string name="extras_marked_extra_as_untransmitted">Extra contrassegnato come non trasmesso</string>
 
     <!-- Reports section -->
-    <string name="reports_timestamps">Ingressi e Uscite</string>
-    <string name="reports_daily_activities">Attività giornaliere</string>
-    <string name="reports_monthly_activities">Attività mensili</string>
+    <string name="report_timestamps">Ingressi e Uscite</string>
+    <string name="report_daily_activities">Attività giornaliere</string>
+    <string name="report_monthly_activities">Attività mensili</string>
 
     <!-- Settings section -->
     <string name="settings_tablet">Impostazioni tablet</string>
