--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,9 +77,9 @@
     <string name="extras_marked_extra_as_untransmitted">Marked extra as untrasmitted</string>
 
     <!-- Reports section -->
-    <string name="reports_timestamps">Timestamps</string>
-    <string name="reports_daily_activities">Daily Activities</string>
-    <string name="reports_monthly_activities">Monthly Activities</string>
+    <string name="report_timestamps">Timestamps</string>
+    <string name="report_daily_activities">Daily Activities</string>
+    <string name="report_monthly_activities">Monthly Activities</string>
 
     <!-- Settings section -->
     <string name="settings_tablet">Tablet settings</string>
