--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -79,7 +79,7 @@
     <!-- Reports section -->
     <string name="report_timestamps">Ingressi e Uscite</string>
     <string name="report_activities_details">Attività dettagli</string>
-    <string name="report_monthly_activities">Attività mensili</string>
+    <string name="report_activities_totals">Attività totali</string>
 
     <!-- Settings section -->
     <string name="settings_tablet">Impostazioni tablet</string>
