--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,7 +78,7 @@
 
     <!-- Reports section -->
     <string name="report_timestamps">Timestamps</string>
-    <string name="report_activities_details">Activities details</string>
+    <string name="report_activities">Activities</string>
 
     <!-- Settings section -->
     <string name="settings_tablet">Tablet settings</string>
