--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,6 +160,7 @@
     <string name="about_feedback_copy_details">Copy details</string>
     <string name="about_feedback_copied_to_clipboard">Copied data to clipboard</string>
     <string name="about_feedback_email_details">Send an e-mail to the author with the details</string>
+    <string name="about_feedback_email_details_with_attached_db">Send an e-mail to the author with details and a database backup</string>
 
     <string name="about_tools_database_backup">Execute a data backup</string>
     <string name="about_tools_database_backup_done">A copy of the database was made</string>
