--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="structures_employee_set_conditions">Assign one or more conditions to the employee</string>
 
     <!-- Extras section -->
+    <string name="extras_activities">Extra activities</string>
     <string name="extras_add_new_extra">Add a new extra</string>
     <string name="extras_time_zero">Nothing</string>
     <string name="extras_time_minutes">%d minutes</string>
